chore: cleanup catalog spec
